# fitnotes-assistant

./: .gitignore  .typos.toml  ATG_Standards.txt  Back_Rehab_Exercises.txt  Back_extension_progression.txt  CLAUDE.md  Exercise_ideas.md  Pes_Anserine_Exercises.txt  big3.txt  equipment_types.txt  exercise_muscles_map.txt  utilities
.claude/: settings.json
.claude/hooks/: session-start.sh
.githooks/: pre-commit
exercises/: exercise_equipment_map.txt  exercise_primary_secondary_muscles.txt
pa/: PIT Monday.fnw  PIT Tuesday.fnw
pit/: PIT Friday.fnw  PIT Monday.fnw  PIT Saturday.fnw  PIT Thursday.fnw  PIT Tuesday.fnw  PIT Wednesday.fnw  exercise_mapping_wh_to_pit.txt  pit_exercise_list.txt  weekly_volume_by_muscle.txt
plans/: Custom Supersets.fnw
plans/back_rehab/: Back Rehab 1.fnw  Back Rehab 2.fnw  Back Rehab 3.fnw
plans/back_rehab_jj/: Back Rehab + JJ - Sunday.fnw  Back Rehab + JJ - Thursday.fnw  Back Rehab + JJ - Tuesday.fnw
plans/pa/: exercise_categories_mapping.txt
plans/pit/: PIT Saturday.fnw  PIT Wednesday.fnw
plans/wh/: WH Friday.fnw  WH Saturday.fnw  WH Thursday.fnw  WH Tuesday.fnw  exercise_equipment_mapping.txt
scripts/: pyproject.toml
scripts/common/: __init__.py  builders.py  calculations.py  io.py
scripts/programs/: README.md  __init__.py  back_rehab_jj.py  back_rehab_one.py  back_rehab_two.py  weekly_split.py
scripts/tests/: test_back_rehab_jj.py  test_back_rehab_one.py  test_back_rehab_two.py  test_builders.py  test_calculations.py
wh/: WH Friday.fnw  WH Monday.fnw  WH Saturday.fnw  WH Thursday.fnw  WH Tuesday.fnw  WH Wednesday.fnw  exercise_categories_mapping.txt
