[project]
name = "workout-generator"
version = "0.1.0"
description = "Generate .fnw workout files with RPE-based programming and volume tracking"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
